trier et imprimer les locations

--- a/tps/tp2/code_adapte_m3s3.ipynb
+++ b/tps/tp2/code_adapte_m3s3.ipynb
@@ -246,6 +246,82 @@
     "print(location)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trier et imprimer les loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MONS apparait 10 fois dans le corpus\n",
+      "NAVIRE apparait 6 fois dans le corpus\n",
+      "BRUXELLOIS apparait 6 fois dans le corpus\n",
+      "GARE NORD apparait 6 fois dans le corpus\n",
+      "TERRE apparait 5 fois dans le corpus\n",
+      "JAPON apparait 5 fois dans le corpus\n",
+      "CONGO apparait 5 fois dans le corpus\n",
+      "INTERROGATOIRE apparait 3 fois dans le corpus\n",
+      "LIVOURNE apparait 3 fois dans le corpus\n",
+      "CHARITÉ apparait 3 fois dans le corpus\n",
+      "TACITURNE apparait 3 fois dans le corpus\n",
+      "LEVA apparait 2 fois dans le corpus\n",
+      "AIRT apparait 2 fois dans le corpus\n",
+      "MACHIN apparait 2 fois dans le corpus\n",
+      "BOUTEILLES apparait 2 fois dans le corpus\n",
+      "CONNUE apparait 2 fois dans le corpus\n",
+      "SOLENNITÉ apparait 2 fois dans le corpus\n",
+      "ESCAUT apparait 2 fois dans le corpus\n",
+      "TOUR apparait 2 fois dans le corpus\n",
+      "PROFITS apparait 2 fois dans le corpus\n",
+      "GARE ROGIER apparait 2 fois dans le corpus\n",
+      "ACAJOU apparait 2 fois dans le corpus\n",
+      "DANEMARK apparait 2 fois dans le corpus\n",
+      "BRUXELLES apparait 2 fois dans le corpus\n",
+      "DITE apparait 2 fois dans le corpus\n",
+      "PROUVE LLCTCN apparait 1 fois dans le corpus\n",
+      "CONTENTER MÉTT apparait 1 fois dans le corpus\n",
+      "BLANCHEUR IMPASSIBLE apparait 1 fois dans le corpus\n",
+      "FÉRAL apparait 1 fois dans le corpus\n",
+      "MAGE apparait 1 fois dans le corpus\n",
+      "ESBRE CHARME apparait 1 fois dans le corpus\n",
+      "CIRO CACHELER apparait 1 fois dans le corpus\n",
+      "RÉUNIR apparait 1 fois dans le corpus\n",
+      "CAMBRIDGE NUISANT apparait 1 fois dans le corpus\n",
+      "RYNLAND apparait 1 fois dans le corpus\n",
+      "OFFICIERS CADETS HEUREUX apparait 1 fois dans le corpus\n",
+      "AJOURNEMENT apparait 1 fois dans le corpus\n",
+      "LIÉGE apparait 1 fois dans le corpus\n",
+      "ARGENTINS apparait 1 fois dans le corpus\n",
+      "ROSALIE apparait 1 fois dans le corpus\n",
+      "FORAME apparait 1 fois dans le corpus\n",
+      "DRAPEAUX apparait 1 fois dans le corpus\n",
+      "PRÉTE apparait 1 fois dans le corpus\n",
+      "POUI apparait 1 fois dans le corpus\n",
+      "REFIRAIM apparait 1 fois dans le corpus\n",
+      "MISÉRABLE apparait 1 fois dans le corpus\n",
+      "COSTUMAS apparait 1 fois dans le corpus\n",
+      "CIETTU OAISTS apparait 1 fois dans le corpus\n",
+      "FORCES SANTÉ apparait 1 fois dans le corpus\n",
+      "FOSSÊ apparait 1 fois dans le corpus\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_location = sorted(location.items(), key=lambda kv: kv[1], reverse=True)\n",
+    "\n",
+    "for location, freq in sorted_location[:50]:\n",
+    "    print(f\"{location} apparait {freq} fois dans le corpus\")"
+   ]
   }
  ],
  "metadata": {
