--- a/tps/tp2/code_adapte_m3s3.ipynb
+++ b/tps/tp2/code_adapte_m3s3.ipynb
@@ -322,6 +322,104 @@
     "for location, freq in sorted_location[:50]:\n",
     "    print(f\"{location} apparait {freq} fois dans le corpus\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reconnaître les organisations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionnaire pour compter les entités \"ORGANIZATION\"\n",
+    "organization = defaultdict(int)\n",
+    "\n",
+    "# Compter les entités \"ORGANIZATION\"\n",
+    "for ent in doc.ents:\n",
+    "    if ent.label_ == \"ORG\" and len(ent.text) > 3:  # Filtrer les entités de type \"ORG\"\n",
+    "        organization[ent.text] += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trier et imprimer les organisations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OUVR apparait 102 fois dans le corpus\n",
+      "CHAUS apparait 53 fois dans le corpus\n",
+      "ALLEMAGNE apparait 22 fois dans le corpus\n",
+      "CHAMB apparait 19 fois dans le corpus\n",
+      "FAISAIT apparait 18 fois dans le corpus\n",
+      "SERVANTE apparait 17 fois dans le corpus\n",
+      "CONGO apparait 17 fois dans le corpus\n",
+      "DÉFINITIVEMENT apparait 16 fois dans le corpus\n",
+      "CÉDER apparait 16 fois dans le corpus\n",
+      "HEUR apparait 16 fois dans le corpus\n",
+      "GAND apparait 16 fois dans le corpus\n",
+      "DÉSIRE apparait 16 fois dans le corpus\n",
+      "FOULE apparait 15 fois dans le corpus\n",
+      "REMBOURSABLE apparait 15 fois dans le corpus\n",
+      "AUSSITÔT apparait 14 fois dans le corpus\n",
+      "AUTORITÉS apparait 14 fois dans le corpus\n",
+      "PÉPIN apparait 14 fois dans le corpus\n",
+      "AUTOMOBILE apparait 13 fois dans le corpus\n",
+      "SACHANT apparait 12 fois dans le corpus\n",
+      "AGENCE apparait 12 fois dans le corpus\n",
+      "SCHAERBEEK apparait 12 fois dans le corpus\n",
+      "VÉLOS apparait 12 fois dans le corpus\n",
+      "LIEUTENANT apparait 11 fois dans le corpus\n",
+      "QUARTIER apparait 11 fois dans le corpus\n",
+      "RENS apparait 11 fois dans le corpus\n",
+      "MAGAS apparait 11 fois dans le corpus\n",
+      "COUPABLE apparait 11 fois dans le corpus\n",
+      "ASSASSINAT apparait 11 fois dans le corpus\n",
+      "SERVI apparait 11 fois dans le corpus\n",
+      "OUVRIÈRES apparait 11 fois dans le corpus\n",
+      "FONSNY apparait 11 fois dans le corpus\n",
+      "MARDI apparait 10 fois dans le corpus\n",
+      "ANDERLECHT apparait 10 fois dans le corpus\n",
+      "OUVRIÈRE apparait 10 fois dans le corpus\n",
+      "GARANTIE apparait 10 fois dans le corpus\n",
+      "ANSPACH apparait 10 fois dans le corpus\n",
+      "LOUVAIN apparait 10 fois dans le corpus\n",
+      "TRANSPORTÉ apparait 10 fois dans le corpus\n",
+      "CONSERVES apparait 10 fois dans le corpus\n",
+      "MONTAGNE apparait 10 fois dans le corpus\n",
+      "CAMIONNEUR apparait 10 fois dans le corpus\n",
+      "LÉOPOLD apparait 10 fois dans le corpus\n",
+      "APPÉTIT apparait 9 fois dans le corpus\n",
+      "LEÇONS apparait 9 fois dans le corpus\n",
+      "RUSSIE apparait 9 fois dans le corpus\n",
+      "FRANÇAIS apparait 9 fois dans le corpus\n",
+      "USINES apparait 9 fois dans le corpus\n",
+      "DLPL apparait 9 fois dans le corpus\n",
+      "BELG apparait 9 fois dans le corpus\n",
+      "FRANEAU apparait 8 fois dans le corpus\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_organization = sorted(organization.items(), key=lambda kv: kv[1], reverse=True)\n",
+    "\n",
+    "for organization, freq in sorted_organization[:50]:\n",
+    "    print(f\"{organization} apparait {freq} fois dans le corpus\")"
+   ]
   }
  ],
  "metadata": {
