--- a/tps/tp2/code_adapte_m3s4.ipynb
+++ b/tps/tp2/code_adapte_m3s4.ipynb
@@ -345,42 +345,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': 'POSITIVE', 'score': 0.9936434030532837}]"
+       "[{'label': 'NEGATIVE', 'score': 0.5601009726524353}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentiment_analyser(\"Ce journal est vraiment super intéressant.\")"
+    "sentiment_analyser(\"Mais l’on n’eii finirait pas s’il fallait signaler toutes les absurdités d«u régime actuel. Ses défenseurs sont décidément bien aveugles s'ils ne les voient pas! Il est vrai que certains d’entre eux ont de singuliers principes.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': 'NEGATIVE', 'score': 0.9664190411567688}]"
+       "[{'label': 'POSITIVE', 'score': 0.8752367496490479}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentiment_analyser(\"Cette phrase est négative et je ne suis pas content !\")"
+    "sentiment_analyser(\"Je voudrais, 'moi aussi, pouvoir crier sans cepse un vigoureux, «un énergique deleiula.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.7269352078437805}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"Gomma se «leva et éclata de rire les éeoles et les musées mdiustriels.\")"
    ]
   }
  ],
