--- a/tps/tp2/code_adapte_m3s4.ipynb
+++ b/tps/tp2/code_adapte_m3s4.ipynb
@@ -402,6 +402,66 @@
    "source": [
     "sentiment_analyser(\"Gomma se «leva et éclata de rire les éeoles et les musées mdiustriels.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.6937665939331055}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"Il n/est pas inultite de rappeler au public que, depuis «le l 8r novembre, les musées «royaux des arts «décoratifs et in- dusünLehs, Parc dut Gin quantienaire, sont où- vents au «public die 10 heures du matin à 3 «heures de «raprès-midi.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.5161919593811035}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"la «poète bruxelloise vient-elle, cm trois jours, die distribuer 1,200,000 carte® et 418,000 cartes illustrées, alors que l’an dernier, «en cinq jours, di'Le n en' avait distribué en tout que 1,400,000.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.832249641418457}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"Il ©sfc diffioiletle faire choix iVutîe bonne marqt.o dd Champagne.\")"
+   ]
   }
  ],
  "metadata": {
