--- a/tps/tp2/code_adapte_m3s4.ipynb
+++ b/tps/tp2/code_adapte_m3s4.ipynb
@@ -462,6 +462,86 @@
    "source": [
     "sentiment_analyser(\"Il ©sfc diffioiletle faire choix iVutîe bonne marqt.o dd Champagne.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.5026593208312988}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"Néanmoin'S, le conseil des mines a «mis toutes les diligences nécessaires dans l’expédition des affaires qui lui étaient soumises.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.6943281292915344}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"Avant de statuer, le tribunal do commerce désigna des exports, qui déclarèrent que les « Bulles de Savon » m'étaient pas do Rembrandt, ensuite de .quoi il ordonna la «résiliation de la vente au profit de M. Van IL... condamnant, en outre, M. de B... à lui payer 10 mille francs de dommages-intérêts.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9033969640731812}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"Il n’est rien de .fondé non plus dans le bruit colporté ici d’une épidémie de .peste à Pisagna : cette ville fut décimée par la poste au commencement de 1904.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.5817428827285767}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyser(\"AL Vanderveldc tient à protester contre certaines allégations de M. Gielen, qui tendraient à prouver que la gauche socialiste retarde le vote de Ta loi sur les mines du Limbourg.\")"
+   ]
   }
  ],
  "metadata": {
