--- a/module2/s2_explore.ipynb
+++ b/module2/s2_explore.ipynb
@@ -210,16 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Anomalous file: all.txt\n"
+     "ename": "NameError",
+     "evalue": "name 'defaultdict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\module2\\s2_explore.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/module2/s2_explore.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m count_decade \u001b[39m=\u001b[39m defaultdict(\u001b[39mint\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/module2/s2_explore.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m count_month \u001b[39m=\u001b[39m defaultdict(\u001b[39mint\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/module2/s2_explore.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m count_newspapers \u001b[39m=\u001b[39m defaultdict(\u001b[39mint\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'defaultdict' is not defined"
      ]
     }
    ],
