--- a/tps/tp2/code_adapte_m3s1.ipynb
+++ b/tps/tp2/code_adapte_m3s1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<yake.yake.KeywordExtractor at 0x21d12b28850>"
+       "<yake.yake.KeywordExtractor at 0x21be188bfd0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,9 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de caractères dans le fichier : 3840462\n",
+      "Premiers 500 caractères du fichier :\n",
+      "Veadredi 5 JaaYÎer 1906,3! Edition ABONNEMENT pour toute la Belgique : S mois, fr.2.25; 6 mois, tr. 4.25; 4 an, 8 te. --issai*- Le SOER est distribué dans toute l’agglomération bruxelloise (rez-do* chaussée) contre 30 centimes par moi*, montant des Irais d’envoL Abonuornect d'étage : 60 cent, par mois* Hollande et Grand-Duché 4 6 fr. par an. - Pays do l'Union postale 24 Ir. par a \"- On peut s aoùnner à tous les bureetust d§ jjoste étaux facteurs en tournis. . . TIRAGE: 150.000 EXEMPlj No 5 parai\n"
+     ]
+    }
+   ],
    "source": [
     "# Lire le texte du fichier\n",
     "input_filename = os.path.join(data_path, \"all-text_1906.txt\")\n",
