vecteur tf-IDF du 1er dic (1960)

--- a/module4/s2_clustering.ipynb
+++ b/module4/s2_clustering.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DECADE = '1950'"
+    "DECADE = '1960'"
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['KB_JB838_1950-01-06_01-00002.txt',\n",
-       " 'KB_JB838_1950-01-07_01-00013.txt',\n",
-       " 'KB_JB838_1950-01-08_01-00011.txt',\n",
-       " 'KB_JB838_1950-01-10_01-00006.txt',\n",
-       " 'KB_JB838_1950-01-15_01-00010.txt']"
+       "['KB_JB838_1960-01-10_01-00018.txt',\n",
+       " 'KB_JB838_1960-01-12_01-00011.txt',\n",
+       " 'KB_JB838_1960-01-13_01-00009.txt',\n",
+       " 'KB_JB838_1960-01-21_01-00014.txt',\n",
+       " 'KB_JB838_1960-01-22_01-00015.txt']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/ LE SOIR Une importante manifestation franco-belge Le Comité franco-belge du Commerce, de l’Industrie et de l’Agriculture qui. au cours de l’année écoulée et dans les circonstances les plus difficiles a rendu aux relations économiques entre les deux pays des services considérables, donnera le 12 janvier, à 19 h. 30, un dîner à l’occasion de l’anniversaire de son installation. Ce comité, qui fonct'"
+       "\"ia« le som ÏJsIne MéuhMrïiqii S.AT'BBirîï^^ J00, r. Merlu» Duché, Vllvorde ch. STENO-DACTYLO élément de let ordre, bilingue, bon- i ne rémunération. Situation d’avenir, i Candidat, A soumet par écrit 130221H PORTANTE 80C.BRUXELL0I8I cherche pour entrée Immédiate Secrétaire Sténo-Dactylo 3 françalee - 1 an d'expérience, al tuât h «table - semaine de 5 Jours. Ecrire é cur. vit et prêt Ag. Rossel 029\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -237,17 +237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<1000x3506 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 703537 stored elements in Compressed Sparse Row format>"
+       "<1000x2998 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 591558 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,27 +266,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "parti           0.276938\n",
-       "loyer           0.152177\n",
-       "janvier         0.148006\n",
-       "populaire       0.147153\n",
-       "propriétaire    0.143666\n",
-       "                  ...   \n",
-       "habitants       0.000000\n",
-       "agit            0.000000\n",
-       "haecht          0.000000\n",
-       "hainaut         0.000000\n",
-       "#               0.000000\n",
-       "Length: 3506, dtype: float64"
+       "rossel        0.429849\n",
+       "ecrire        0.290763\n",
+       "agence        0.287302\n",
+       "bilingue      0.195620\n",
+       "importante    0.172368\n",
+       "                ...   \n",
+       "envoyé        0.000000\n",
+       "er            0.000000\n",
+       "erreurs       0.000000\n",
+       "esp           0.000000\n",
+       "♦             0.000000\n",
+       "Length: 2998, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
