sauvegarder les textes de chaque cluster

--- a/module4/s2_clustering.ipynb
+++ b/module4/s2_clustering.ipynb
@@ -1539,6 +1539,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Placer tous les textes des deux clusters dans deux fichiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 0 - Texte sauvegardé dans ../tps/tp3/cluster_0_texts.txt\n",
+      "Cluster 1 - Texte sauvegardé dans ../tps/tp3/cluster_1_texts.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Définir la fonction pour lire et enregistrer les fichiers textes\n",
+    "def read_file(file_path):\n",
+    "    \"\"\"Lire le contenu d'un fichier texte donné\"\"\"\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        return f.read()\n",
+    "\n",
+    "# Définir le répertoire de destination des deux fichiers\n",
+    "output_dir = \"../tps/tp3/\"  \n",
+    "\n",
+    "# Créer les fichiers pour chaque cluster et y enregistrer les textes\n",
+    "for label, files_in_cluster in clustering.items():\n",
+    "    output_file = os.path.join(output_dir, f\"cluster_{label}_texts.txt\")  # Nom du fichier pour chaque cluster\n",
+    "    with open(output_file, 'w', encoding='utf-8') as f_out:\n",
+    "        for file_path in files_in_cluster:\n",
+    "            file_content = read_file(data_path + file_path)  # Lire le contenu du fichier\n",
+    "            f_out.write(file_content + \"\\n\\n\")  # Ajouter un saut de ligne entre chaque texte\n",
+    "    print(f\"Cluster {label} - Texte sauvegardé dans {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Visualiser les clusters"
    ]
   },
