similarité du terme "bilingue"

--- a/tps/tp3/code_modele1_m4s3.ipynb
+++ b/tps/tp3/code_modele1_m4s3.ipynb
@@ -635,6 +635,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('parfaitement_bilingue', 0.9543254375457764),\n",
+       " ('libre_service_militaire', 0.9438415765762329),\n",
+       " ('jeune_element', 0.9236763119697571),\n",
+       " ('bilingue_parfait', 0.9222480058670044),\n",
+       " ('bonne_presentation', 0.9204741716384888),\n",
+       " ('parfait_bilingue', 0.9113965034484863),\n",
+       " ('employe_bilingue', 0.9043526649475098),\n",
+       " ('humanites_completes', 0.8905463218688965),\n",
+       " ('jeune_employe', 0.8895969986915588),\n",
+       " ('element_bilingue', 0.8880218863487244)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar(\"bilingue\", topn=10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
