stopword pour wc 8

--- a/tps/tp2/code_adapte_m3s2.ipynb
+++ b/tps/tp2/code_adapte_m3s2.ipynb
@@ -58,7 +58,8 @@
     "       \"grand\", \"heure\", \"bon\", \"cuis\", \"belle\", \"petite\", \"jour\",\n",
     "       \"hier\", \"pens\", \"bons\", \"cent\", \"fort\", \"sach\", \"appr\", \"alors\", \"cent\", \"plusieurs\", \"seul\", \"part\",\n",
     "       \"gros\", \"pers\", \"aujourd\", \"toujours\", \"bonne\", \"grande\", \"chaque\", \"fois\", \"trop\", \"boulevard\", \"monsieur\", \"elles\", \n",
-    "       \"louée\", \"suite\"]\n",
+    "       \"louée\", \"suite\", \"soir\", \"prix\", \"vend\", \"vendre\", \"quart\", \"ouvr\", \"addresser\", \"prés\", \n",
+    "       \"cert\", \"assez\", \"pris\", \"chamb\", \"chambre\", \"louer\", \"place\", \"demande\", \"midi\", \"nord\", \"fille\"]\n",
     "sw = set(sw)\n"
    ]
   },
