Afficher les mots les moins fréquents

--- a/module3/s2_wordcloud.ipynb
+++ b/module3/s2_wordcloud.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "100"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "100"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "\"KBDD envir. Bourse. 1 er janv. sent homme en peau brun, fourré, main gauche. Rapporter, 18, r. des Commercante, bonne réeomp> 27821 PERDE jeudi ' 28 entre 11 h. et midi, Bourse - Nord, mont.-brai dame\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "\"KBDD envir. Bourse. 1 er janv. sent homme en peau brun, fourré, main gauche. Rapporter, 18, r. des Commercante, bonne réeomp> 27821 PERDE jeudi ' 28 entre 11 h. et midi, Bourse - Nord, mont.-brai dame or. Souvenir fam.* Bapp. c. b. récomp. & Mme Moucheur, 67, r. Pacification, apr. I9h. 27882 12 34 dée. apr.-midl a paquet confié à chanff. a été enlevé de sa voit, arrêtée r. du Commerce. La per», euscept. restlt. paquet peut s’adr.chauf- feur respons.: 50, aven. Princesse Elisateth, 50, Schaerbeek\""
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -248,7 +248,7 @@
        "'Output has been written in ../data/tmp/1945_clean.txt!'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "'KBDD ENVIR BOURSE JANV SENT HOMME PEAU BRUN FOURRÉ MAIN GAUCHE RAPPORTER COMMERCANTE BONNE RÉEOMP PERDE JEUDI MIDI BOURSE NORD MONT BRAI DAME SOUVENIR FAM BAPP RÉCOMP MME MOUCHEUR PACIFICATION APR DÉE APR MIDL PAQUET CONFIÉ CHANFF ENLEVÉ VOIT ARRÊTÉE COMMERCE PER EUSCEPT RESTLT PAQUET ADR CHAUF FEUR RESPONS AVEN PRINCESSE ELISATETH SCHAERBEEK DISCRET BONNE RÉCOMP PERDU TROUSSEAU CLEFS FŒSÉ LOUPS ARR TRAM RÉCOMP COENE CHAUSSÉE HAECHT SCH PERDU DÉE PORTE MONNAIE HOMI CUIR BRUN CONT MÉDAILLES GROS '"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -317,12 +317,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Afficher les mots les moins fréquents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZWAAN: 1\n",
+      "ATOEMBERG: 1\n",
+      "VAODERVELDEO: 1\n",
+      "ADJADLEARIEO: 1\n",
+      "ADJAOENTA: 1\n",
+      "ETTUÉA: 1\n",
+      "OENEET: 1\n",
+      "TMMÉDIATA: 1\n",
+      "CURPH: 1\n",
+      "HMDF: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trier les mots par fréquence croissante (les moins fréquents d'abord)\n",
+    "least_common_words = frequencies.most_common()[-10:]  # Afficher les 10 mots les moins fréquents\n",
+    "\n",
+    "# Afficher les résultats\n",
+    "for word, freq in least_common_words:\n",
+    "    print(f\"{word}: {freq}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Créer, stocker et afficher le nuage de mots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
