Afficher les mots le moins fréquents

--- a/tps/tp2/code_adapte_m3s2.ipynb
+++ b/tps/tp2/code_adapte_m3s2.ipynb
@@ -512,6 +512,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Afficher les mots les moins fréquents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'least_common_words_common_words' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\tps\\tp2\\code_adapte_m3s2.ipynb Cell 25\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m least_common_words \u001b[39m=\u001b[39m frequencies\u001b[39m.\u001b[39mmost_common()[\u001b[39m-\u001b[39m\u001b[39m200\u001b[39m:]  \u001b[39m# Afficher les 10 mots les moins fréquents\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Créer un DataFrame pandas pour le tableau\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(least_common_words_common_words, columns\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mMot\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFréquence\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Modifier les options d'affichage pour scroller dans Jupyter\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m pd\u001b[39m.\u001b[39mset_option(\u001b[39m'\u001b[39m\u001b[39mdisplay.max_rows\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m200\u001b[39m)  \u001b[39m# Ajuster le nombre de lignes affichées\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'least_common_words_common_words' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Trier les mots par fréquence croissante (les moins fréquents d'abord)\n",
+    "least_common_words = frequencies.most_common()[-200:]  # Afficher les 10 mots les moins fréquents\n",
+    "\n",
+    "# Créer un DataFrame pandas pour le tableau\n",
+    "df = pd.DataFrame(least_common_words, columns=[\"Mot\", \"Fréquence\"])\n",
+    "\n",
+    "# Modifier les options d'affichage pour scroller dans Jupyter\n",
+    "pd.set_option('display.max_rows', 200)  # Ajuster le nombre de lignes affichées\n",
+    "pd.set_option('display.max_columns', None)  # Afficher toutes les colonnes\n",
+    "\n",
+    "# Afficher le tableau\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Créer, stocker et afficher le nuage de mots"
    ]
   },
